--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
+    <h1>Este es un mensaje para informar que se ha podido ejecutar el comando git pull</h1>
     <h1>PERIODICO: INFORMACIÓN SOBRE COMO CREAR UNA PEQUEÑA GRAN EMPRESA BY RODRIXXXXXXXX</h1>
     <img src="./resources/img/empre.png">
         <table class="first">
