--- a/presentacion.html
+++ b/presentacion.html
@@ -17,7 +17,7 @@
 			Hola
 		</h1>
 		<h3 class="efecto">
-			MUNDO
+			WORLD
 		</h3>
 	<fieldset>
 	<p> Bienvenido a la web más divertida del mundo </p>
