--- a/presentacion.html
+++ b/presentacion.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>	
 		<title>
-		Victoria Gonzalez Lopez
+		Montero Rodrigo
 		</title>
 		<link rel="stylesheet" href="estilo.css">
 		<meta charset="utf-8">
